обновляет index.html и portfolio.html для позиционирования

--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work">
             <li class="item">
+              <h3 class="title-work">Десктопные приложения</h3>
               <img
-                class="image"
+                class="image work"
                 src="./images/img11.jpg"
                 alt="пальцы рук печатают на клавиатуре"
                 width="370"
@@ -115,8 +116,9 @@
               />
             </li>
             <li class="item">
-              <img
-                class="image"
+              <p class="title-work mobile">Мобильные приложения</p>
+            <img
+                class="image work"
                 src="./images/img12.jpg"
                 alt="в левой руке телефон, пальцами правой руки водит по тачпаду макбука"
                 width="370"
@@ -124,8 +126,9 @@
               />
             </li>
             <li class="item">
+              <h3 class="title-work design">Дизайнерские решения</h3>
               <img
-                class="image"
+                class="image work"
                 src="./images/img13.jpg"
                 alt="в левой руке планшет, на экране которого электронная цветовая палитра"
                 width="370"
