--- a/portfolio.html
+++ b/portfolio.html
@@ -66,12 +66,15 @@
         <ul class="project-list">
           <li class="item">
             <a class="link" href="">
+              <div class="project-overlay">
               <img class="image"
                 src="./images/img1.jpg"
                 alt="часть команды: две девушки и мужчина на отдельных фотокарточках с именами и должностями"
                 width="370"
                 height="294"
               />
+              <p class="project-overlay-text ">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
               <div class="description">
               <h2 class="title">Технокряк</h2>
               <p class="text">Веб-сайт</p>
@@ -80,12 +83,15 @@
           </li>
           <li class="item">
             <a class="link" href="">
+              <div class="project-overlay">
               <img class="image"
                 src="./images/img2.jpg"
                 alt="два баскетболиста борются в воздухе за мяч"
                 width="370"
                 height="294"
               />
+              <p class="project-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
               <div class="description">
               <h2 class="title">Постер New Orlean vs Golden Star</h2>
               <p class="text">Дизайн</p>
@@ -94,12 +100,15 @@
           </li>
           <li class="item">
             <a class="link" href="">
+              <div class="project-overlay">
               <img class="image"
                 src="./images/img3.jpg"
                 alt="Надпись The Seafood restautant с рыбой на фоне"
                 width="370"
                 height="294"
               />
+              <p class="project-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
               <div class="description">
               <h2 class="title">Ресторан Seafood</h2>
               <p class="text">Приложение</p>
@@ -108,12 +117,15 @@
           </li>
           <li class="item">
             <a class="link" href="">
+              <div class="project-overlay">
+              <p class="project-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
               <img class="image"
                 src="./images/img4.jpg"
                 alt="большие черные наушники"
                 width="370"
                 height="294"
               />
+            </div>
               <div class="description">
               <h2 class="title">Проект Prime</h2>
               <p class="text">Маркетинг</p>
@@ -122,12 +134,15 @@
           </li>
           <li class="item">
             <a class="link" href="">
+              <div class="project-overlay">
               <img class="image"
                 src="./images/img5.jpg"
                 alt="одна белая коробочка побольше и одна поменьше под цвет дерева"
                 width="370"
                 height="294"
               />
+              <p class="project-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
               <div class="description">
               <h2 class="title">Проект Boxes</h2>
               <p class="text">Приложение</p>
@@ -136,12 +151,15 @@
           </li>
           <li class="item">
             <a class="link" href="">
+              <div class="project-overlay">
               <img class="image"
                 src="./images/img6.jpg"
                 alt="компьютерный моноблок"
                 width="370"
                 height="294"
               />
+              <p class="project-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
               <div class="description">
               <h2 lang="en" class="title">Inspiration has no Borders</h2>
               <p class="text">Веб-сайт</p>
@@ -150,12 +168,15 @@
           </li>
           <li class="item">
             <a class="link" href="">
+              <div class="project-overlay">
               <img class="image"
                 src="./images/img7.jpg"
                 alt="Открытый фотожурнал"
                 width="370"
                 height="294"
               />
+              <p class="project-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
               <div class="description">
               <h2 class="title">Издание Limited Edition</h2>
               <p class="text">Дизайн</p>
@@ -164,12 +185,15 @@
           </li>
           <li class="item">
             <a class="link" href="">
+              <div class="project-overlay">
               <img class="image"
                 src="./images/img8.jpg"
                 alt="этикетка для одежды"
                 width="370"
                 height="294"
               />
+              <p class="project-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
               <div class="description">
               <h2 class="title">Проект LAB</h2>
               <p class="text">Маркетинг</p>
@@ -178,12 +202,15 @@
           </li>
           <li class="item">
             <a class="link" href="">
+              <div class="project-overlay">
               <img class="image"
                 src="./images/img9.jpg"
                 alt="пальцы рук печатают по клавиатуре macbook"
                 width="370"
                 height="294"
               />
+              <p class="project-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            </div>
               <div class="description">
               <h2 lang="en" class="title">Growing Business</h2>
               <p class="text">Приложение</p>
@@ -195,7 +222,7 @@
       </section>
     </main>
     <!--Футер-->
-    <<footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="info">
           <div class="contacts">
