обновляет .html для добавления анимации

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <li class="item">
               <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
-            <li class="item"><a href="" class="link">Контакты</a>
-            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="auth-nav">
@@ -41,15 +40,13 @@
             <a href="mailto:info@devstudio.com" class="link">
               <svg class="icon-envelope" width="16px" height="12px">
                 <use href="./images/icons.svg#icon-envelope"></use>
-            </svg>info@devstudio.com</a
-            >
+              </svg>info@devstudio.com</a>
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link">
               <svg class="icon-tel" width="10px" height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
-              </svg>+38 096 111 11 11</a
-            >
+              </svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -62,7 +59,9 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button data-modal-open type="button" class="hero-button">Заказать услугу</button>
+          <button data-modal-open type="button" class="hero-button">
+            Заказать услугу
+          </button>
         </div>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
@@ -127,7 +126,7 @@
             </li>
             <li class="item">
               <p class="title-work mobile">Мобильные приложения</p>
-            <img
+              <img
                 class="image work"
                 src="./images/img12.jpg"
                 alt="в левой руке телефон, пальцами правой руки водит по тачпаду макбука"
